# customRobotBasicStack

./: README.md
amr_bringup/: CMakeLists.txt  package.xml
amr_bringup/config/: twist_mux.yaml
amr_bringup/launch/: amr.launch  amr_remote.launch  amr_teleop.launch  twist_mux.launch
amr_bringup/launch/includes/: description.launch.xml
amr_bringup/nodes/: amr_teleop_key
amr_description/: CMakeLists.txt  package.xml
amr_description/urdf/: amr.gazebo  amr.xacro  macros.xacro
amr_gazebo/: CMakeLists.txt  package.xml
amr_motion/: CMakeLists.txt  package.xml
amr_motion/include/amr_motion/: amr_motion.h  dummyPublisher.h  ros_class.h
amr_motion/launch/: controller.launch
amr_motion/src/: amr_motion.cpp  dummyPublisher.cpp  ros_class.cpp
amr_msgs/: CMakeLists.txt  package.xml
amr_msgs/msg/: Battery.msg  ERROR.msg  SensorState.msg  Status.msg
amr_msgs/srv/: robotEnable.srv  robotPosition.srv
amr_navigation/: CMakeLists.txt  package.xml
amr_navigation/launch/: amr_navigation.launch  move_base.launch
amr_navigation/param/: dwa_local_planner_params.yaml
amr_navigation/rviz/: amr_navigation.rviz
twist_mux/src/: twist_mux_diagnostics.cpp
